--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,5 +58,8 @@
         "fortran_fixed-form": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
         "fortran": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
         "sml": "cd $dir && sml $fileName"
+    },
+    "files.associations": {
+        "main.h": "c"
     }
 }
