--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
     "code-runner.saveFileBeforeRun": true,
     "git.enableSmartCommit": true,
     "code-runner.executorMap": {
-        "c": "cd $dir && gcc -Wall -pedantic -Werror -Wextra -std=gnu89 main.c $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt && rm $fileNameWithoutExt.exe"
+        "c": "cd $dir && gcc -Wall -pedantic -Werror -Wextra -std=gnu89 *.c -o $fileNameWithoutExt && $dir$fileNameWithoutExt && rm $fileNameWithoutExt.exe"
     }
 }
