--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     },
     "files.associations": {
         "type_traits": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "search_algos.h": "c"
     }
 }
